<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RingMyPhone</string>
    <string name="action_about">About</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_title">Welcome to RingMyPhone!</string>
    <string name="welcome_body">Install the Pebble watch app, then just close this and use your Pebble to start your phone ringing.</string>
    <string name="stop_button">Stop Ringing!</string>
    <string name="stop_button_response">Stopping Ringer…</string>
    <string name="stop_description">Maybe you lost your watch after ringing your phone, maybe other things, use this to silence your phone!</string>
    <string name="install_watch_app_button">Install Phone App</string>
    <string name="install_watch_app_description">Install the watch app to your Pebble. Come back here to install updates as they are released.</string>
    <string name="install_watch_app_failed_pebble">Pebble App not found. Could not complete install.</string>
    <string name="install_watch_app_failed_storage">External storage not available. Could not complete install.</string>
    <string name="purchase_app_description">Welcome to the Ring My Phone trial! You can use this app for a week and see if you like it, after which it will stop working. You can either purchase it or uninstall it, or even keep it around as a memento of when it used to work!</string>
    <string name="purchase_app_button">Purchase</string>
    <string name="purchase_app_countdown">%1$dd %2$dh %3$dm remaining</string>
    <string name="purchase_app_countdown_expired">trial expired</string>
    <string name="about_title">About</string>
    <string name="about_body_header">Dark Rock Studios</string>
    <string name="about_body_bio">Adam Brown (Wavesonics)</string>
    <string name="about_body_email">darkrockstudios@gmail.com</string>
    <string name="about_body_website">darkrockstudios.com</string>
    <string name="about_body_market">Check out more of our apps:</string>
    <string name="about_body_market_button">Google Play</string>
    <string name="about_body_open_source">RingMyPhone is Open Source!</string>
    <string name="about_body_github_android"><a href="http://github.com/Wavesonics/RingMyPhoneAndroid">RingMyPhoneAndroid</a></string>
    <string name="about_body_github_pebble"><a href="http://github.com/Wavesonics/RingMyPhonePebble">RingMyPhonePebble</a></string>
    <string name="about_body_feedback"><i>Found a bug? Feature request?</i>\n<a href="https://github.com/Wavesonics/RingMyPhoneAndroid/issues/new">Log it here!</a></string>

    <string name="notification_expired_ticker">RingMyPhone trial expired</string>
    <string name="notification_expired_text">To keep using RingMyPhone please purchase it by clicking here.</string>
    <string name="notification_expired_purchase_button">Purchase</string>

    <string name="notification_outofdate_ticker">RingMyPhone needs to update</string>
    <string name="notification_outofdate_text">There is an update for the RingMyPhone watch app, update to it by tapping here.</string>
    <string name="notification_outofdate_upgrade_button">Upgrade</string>

    <string name="notification_ringing_ticker">RingMyPhone is ringing</string>
    <string name="notification_ringing_text">Tap to silence ringing</string>
    <string name="alsert_os_title">Select Pebble OS</string>
    <string name="alert_os_message">Please select which Pebble OS version your watch is running. If you don\'t know, than it\'s probably 1.0. If you pick the wrong one just come back and try the other!</string>
    <string name="alert_os_positive_button">Pebble OS 2.0</string>
    <string name="alert_os_negative_button">Pebble OS 1.0</string>
    <string name="notification_update_title">Update ready to install</string>
    <string name="notification_update_text">Tap here to install the new RingMyPhone watch app</string>

    <string name="activity_title_settings">Settings</string>
    <string name="pref_title_general">General</string>
    <string name="pref_title_silent_mode">Silent Mode</string>
    <string name="pref_summary_silent_mode">Just light up the screen. Great for finding your phone in your pocket book!</string>
</resources>